--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,9 @@
         "url" : "https://skr3.nlm.nih.gov/SemMedDB/"
     },
     "dumper" : {
-        "data_url" : ["https://github.com/r76941156/SEMMED_APIs/blob/main/source_file.tar.gz",
+        "data_url" : ["https://github.com/r76941156/SEMMED_APIs/raw/main/source_file.tar.gz",
                       "https://raw.githubusercontent.com/biolink/biolink-model/master/biolink-model.yaml"],
-        "uncompress" : True,
+        "uncompress" : true,
         "release" : "version:get_release"
     },
     "uploader" : {
