--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
         "url" : "https://skr3.nlm.nih.gov/SemMedDB/"
     },
     "dumper" : {
-        "data_url" : ["https://dl.dropboxusercontent.com/s/7bvoteenil8iqtk/semmed_test.csv"],
+        "data_url" : ["https://dl.dropboxusercontent.com/s/7bvoteenil8iqtk/semmed_test.csv",
+                      "https://metamap.nlm.nih.gov/Docs/SemanticTypes_2018AB.txt"],
         "uncompress" : false,
         "release" : "version:get_release"
     },
