--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
         "url" : "https://skr3.nlm.nih.gov/SemMedDB/"
     },
     "dumper" : {
-        "data_url" : ["https://metamap.nlm.nih.gov/Docs/SemanticTypes_2013AA.txt"],
+        "data_url" : ["https://dl.dropboxusercontent.com/s/ue2wzkvqcrp60mx/semmed_small.csv",
+                      "https://metamap.nlm.nih.gov/Docs/SemanticTypes_2013AA.txt"],
         "uncompress" : false,
         "release" : "version:get_release"
     },
